# A4VulkanCamera

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/common/: VKDefines.h  VKShaders.h  VKUtils.cpp  VKUtils.h  VulkanInitializers.h
app/src/main/cpp/common/src/: GameActivitySources.cpp
app/src/main/cpp/engine/: VKBufferManager.cpp  VKBufferManager.h  VKDeviceManager.cpp  VKDeviceManager.h  VKOffScreen.cpp  VKOffScreen.h  VKRender.cpp  VKRender.h  VKSwapChainManager.cpp  VKSwapChainManager.h  VKTextureManager.cpp  VKTextureManager.h  VKVideoRenderer.cpp  VKVideoRenderer.h
app/src/main/cpp/filter/: EffectFilter.cpp  EffectFilter.h  FilterDefine.h  FilterType.h  FilterUtil.cpp  FilterUtil.h  OffScreenFilter.cpp  OffScreenFilter.h  RGBFilter.cpp  RGBFilter.h  VulkanFilter.cpp  VulkanFilter.h
app/src/main/cpp/jni/: VKVideoRenderJNI.cpp  VKVideoRenderJNI.h  VKVideoRendererContext.cpp  VKVideoRendererContext.h
app/src/main/cpp/triangle/: VulkanMain.cpp
app/src/main/cpp/utils/: Log.h
app/src/main/java/com/alanwang4523/a4vulkancamera/: MainActivity.java  TriangleDemoActivity.java
app/src/main/java/com/alanwang4523/a4vulkancamera/activity/: MainActivity.java  TriangleDemoActivity.java  VulkanCameraActivity.java
app/src/main/java/com/alanwang4523/a4vulkancamera/capture/: PreviewFrameHandler.java  VideoCameraPreview.java  VideoCapture.java
app/src/main/java/com/alanwang4523/a4vulkancamera/render/: VKVideoRenderer.java
app/src/main/res/layout/: activity_main.xml  activity_triangle_demo.xml  activity_vulkan_camera.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
